Fix layout shift

--- a/how-to/cloud-interop-basic/public/common/style/app.css
+++ b/how-to/cloud-interop-basic/public/common/style/app.css
@@ -164,6 +164,8 @@ p {
 
 main {
 	min-height: 100px;
+	flex: 1;
+	overflow: hidden;
 }
 
 a {
